# openai-api-lambda

./: .gitignore  README.md  Taskfile.yml  forward_to_openai.py  main.tf  openai-forwarder.py  pyproject.toml
.github/workflows/: apply.yml  deploy.yml
